# github_prs_and_comments_visualization

./: README.md  pyproject.toml
script/: config.py  get_data.py  query_template.txt  visualize.py
