[tool.poetry]
name = "github-pr-viewer"
version = "0.1.0"
description = ""
authors = ["flatton <tomoki.fujihara@abejainc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"
tqdm = "^4.66.4"
pydantic = "^2.8.2"
pandas = "^2.2.2"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
